# Task-Master

./: .gitignore  Cargo.toml  Makefile  README.md  cleanup.sh  main.rs  package.json  settings.gradle.kts
Task_Master/: build.gradle.kts
Task_Master/Task_Master.xcodeproj/: project.pbxproj
Task_Master/src/main/java/com/hsgit/task_master/android/: MainActivity.kt  MyApplicationTheme.kt
gradle/wrapper/: gradle-wrapper.properties
model/: task.rs  todo.rs
routes/: task.rs
services/: Cargo.toml  Readme.md
services/src/: main.rs
shared/: build.gradle.kts
shared/src/androidMain/kotlin/com/hsgit/task_master/: Platform.android.kt
shared/src/commonMain/kotlin/com/hsgit/task_master/: Greeting.kt  Platform.kt
shared/src/iosMain/kotlin/com/hsgit/task_master/: Platform.ios.kt
src/: App.css  App.js  index.js
src/components/atoms/: Button.jsx  CardHeader.jsx
src/components/organisms/: Task.jsx
src/screens/: Home.jsx
src/storeManager/: store.js
src/storeManager/slices/: authSlice.js  taskSlice.js  userSlice.js
storeManager/: manager.rs  mod.rs  store.rs
